# GruppeBot

./: README.md
BotGruppe/: bot.py  pyproject.toml  requirements
